fixed overflow problems

--- a/landing/style/style.css
+++ b/landing/style/style.css
@@ -25,7 +25,7 @@ body{
     background-color: var(--background-color);
     background-repeat: no-repeat;
     background-attachment: fixed;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 .title{
     color: var(--title-color);
